--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,17 +1,9 @@
 .navbar {
     background-color: rgb(174, 168, 168); 
     display: flex; 
+    justify-content:space-evenly; 
   }
   
 .navbar-icon {
-    display: flex;  
-    flex-direction: row;
-    justify-content: flex-start;
-    margin: 10px; 
-}
-  
-.navbar .navbar-item {
-    display: flex; 
-    flex-direction: row; 
-    justify-content: flex-end; 
+    margin: 10px;
 }
