--- a/src/Category.css
+++ b/src/Category.css
@@ -35,8 +35,8 @@
     padding: 8px;
     max-width: 300px; 
     background-color: aliceblue;
-    border-radius: 12px;
-    border: 1px solid rgb(136, 143, 232); 
+    border-radius: 18px;
+    border: 2px solid rgb(152, 158, 251); 
     margin: 0 auto;
     margin-top: 20vh; 
     text-align: center;
@@ -45,7 +45,8 @@
   }
   
   .tab:hover {
-    transform: translateY(-10px);
+    transform: translateY(-8px);
+    background-color: rgb(206, 225, 241);
   }
   
   .tab-list{
@@ -64,10 +65,6 @@
     padding: 1.4px; 
   }
   
-  /* .tab {
-    margin: 0.5em;
-    font-weight: 500;
-    font-size: 0.8rem;
-    color: var(--clr-fg-alt);
-  }
-   */
+ #reset:hover {
+    font-weight: bold; 
+ }
